--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,6 @@ h1 {
 }
 ul {
   padding: 0px 10px 0px 20px;
-  list-style: none;
 }
 li {
   margin: 5px;
@@ -76,4 +75,7 @@ li {
   border-radius: 6px;
   margin: 20px 0 0 0;
   padding: 10px;
+}
+.active {
+  color: red;
 }
