--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  font-family: sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 20px;
   padding: 0;
 }
@@ -55,6 +55,7 @@ ul {
   border-radius: 6px;
   margin: 20px 0 0 0;
   padding: 10px;
+  background-color: lightgray;
 }
 
 h1,
