--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,13 @@ button {
 .output {
   margin: 20px;
 }
+
+.input__box {
+  width: 30%;
+  border-radius: 20px;
+  padding: 15px 20px;
+  font-size: 20px;
+  border: none;
+  transition: 0.2s;
+  box-shadow: inset 0 0 5px black;
+}
